# Timer_rubiks_cube

./: Cargo.toml  Dockerfile  docker-compose.yml  dockerfile  respaldo.txt  speedcube_data.db
crates/speedcube_api/: Cargo.toml
crates/speedcube_api/src/: main.rs
crates/speedcube_api/static/: index.html  manifest.json  sw.js
crates/speedcube_db/: Cargo.toml
crates/speedcube_db/src/: lib.rs
crates/speedcube_domain/: Cargo.toml
crates/speedcube_domain/src/: lib.rs  models.rs  stats.rs  wca_scramble.rs
